Update all dependencies & fix ESLint error with Form @formik. Change compiler typescript target from ES6 to ES2023.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "experimentalDecorators": true,
-        "target": "es6",
-        "module": "esnext",
+        "target": "ES2023",
+        "module": "ESNext",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
