--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 FAST_REFRESH=true
 HOST=dev-rootdb-frontend.localhost.com
 PORT=3000
-REACT_APP_ROOTDB_VERSION=1.0.5
+REACT_APP_ROOTDB_VERSION=dev
 REACT_APP_API_URL=http://dev-rootdb-api.localhost.com
 REACT_APP_ECHO_CLIENT_KEY=jetuePoh5uyeeth8oom1Aeg8Lae7guchie2ieba3ahyai
 REACT_APP_ECHO_CLIENT_CLUSTER=dev-rootdb-api-cluster
