--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
     "version": "1.0.4",
     "private": true,
     "dependencies": {
-        "@tanstack/react-table": "^8.16.0",
-        "@testing-library/jest-dom": "^6.4.2",
-        "@testing-library/react": "^15.0.6",
+        "@tanstack/react-table": "^8.17.3",
+        "@testing-library/jest-dom": "^6.4.5",
+        "@testing-library/react": "^15.0.7",
         "@testing-library/user-event": "^14.5.2",
         "@types/dompurify": "^3.0.5",
         "@types/jest": "^29.5.12",
         "@types/lodash.round": "^4.0.9",
-        "@types/node": "^20.12.8",
-        "@types/react": "^18.3.1",
+        "@types/node": "^20.12.12",
+        "@types/react": "^18.3.2",
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-csv": "^1.1.10",
         "@types/react-dom": "^18.3.0",
         "@types/react-grid-layout": "^1.3.5",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-transition-group": "^4.4.10",
-        "@typescript-eslint/eslint-plugin": "^7.8.0",
-        "@typescript-eslint/parser": "^7.8.0",
-        "@typescript-eslint/scope-manager": "^7.8.0",
+        "@typescript-eslint/eslint-plugin": "^7.9.0",
+        "@typescript-eslint/parser": "^7.9.0",
+        "@typescript-eslint/scope-manager": "^7.9.0",
         "ace-builds": "~1.31.2",
         "axios": "^1.6.8",
         "buffer": "^6.0.3",
@@ -29,13 +29,13 @@
         "crypto-browserify": "^3.12.0",
         "css-loader": "^7.1.1",
         "d3": "^7.9.0",
-        "dompurify": "^3.1.2",
+        "dompurify": "^3.1.3",
         "env-cmd": "^10.1.0",
         "eslint": "^8.57.0",
-        "formik": "^3.0.0-next.8",
+        "formik": "^2.4.6",
         "highlight.js": "^11.9.0",
-        "i18next": "^23.11.3",
-        "i18next-browser-languagedetector": "^7.2.1",
+        "i18next": "^23.11.4",
+        "i18next-browser-languagedetector": "^8.0.0",
         "js-cookie": "^3.0.5",
         "laravel-echo": "^1.16.1",
         "lodash.difference": "^4.5.0",
@@ -48,7 +48,7 @@
         "primereact": "10.6.5",
         "prop-types": "^15.8.1",
         "pusher-js": "8.4.0-rc2",
-        "quill": "^2.0.1",
+        "quill": "^2.0.2",
         "react": "^18.3.1",
         "react-ace": "https://github.com/gchallen/react-ace",
         "react-app-rewired": "^2.2.1",
@@ -58,11 +58,11 @@
         "react-grid-layout": "^1.4.4",
         "react-hanger": "^2.4.5",
         "react-i18next": "^14.1.1",
-        "react-icons": "^5.2.0",
+        "react-icons": "^5.2.1",
         "react-refresh": "^0.14.2",
         "react-render": "^4.0.0",
         "react-resize-detector": "^10.0.1",
-        "react-router-dom": "^6.23.0",
+        "react-router-dom": "^6.23.1",
         "react-scripts": "^5.0.1",
         "react-toastify": "^10.0.5",
         "react-tracked": "^1.7.14",
