--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
         "d3": "^7.9.0",
         "dompurify": "^3.1.3",
         "env-cmd": "^10.1.0",
-        "eslint": "^8.57.0",
         "formik": "^2.4.6",
         "highlight.js": "^11.9.0",
         "i18next": "^23.11.4",
@@ -65,13 +64,12 @@
         "react-router-dom": "^6.23.1",
         "react-scripts": "^5.0.1",
         "react-toastify": "^10.0.5",
-        "react-tracked": "^1.7.14",
+        "react-tracked": "^2.0.0",
         "react-transition-group": "^4.4.5",
         "react-virtual": "^2.10.4",
         "sass": "^1.76.0",
         "sass-loader": "^14.2.1",
         "stream-browserify": "^3.0.0",
-        "typescript": "^5.4.5",
         "use-reducer-async": "^2.1.1",
         "yup": "^1.4.0"
     },
@@ -111,9 +109,14 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@babel/preset-react": "^7.24.1",
         "@babel/preset-typescript": "^7.24.1",
+        "@eslint/eslintrc": "^3.0.2",
+        "@eslint/js": "^9.2.0",
         "@types/js-cookie": "^3.0.6",
         "cypress": "^13.8.1",
-        "eslint-config-react-app": "^7.0.1"
+        "eslint": "^8.57.0",
+        "eslint-config-react-app": "^7.0.1",
+        "typescript": "^5.4.5",
+        "typescript-eslint": "^7.9.0"
     },
     "packageManager": "yarn@4.1.1"
 }
