[auto] tagging to v1.1.2

--- a/.env.build
+++ b/.env.build
@@ -1,7 +1,7 @@
 FAST_REFRESH=true
 HOST=rootdb-frontend.localhost.com
 PORT=8091
-REACT_APP_ROOTDB_VERSION=dev
+REACT_APP_ROOTDB_VERSION=1.1.2
 REACT_APP_API_URL=http://rootdb-api.localhost.com
 REACT_APP_VITE_REVERB_APP_KEY=jetuePoh5uyeeth8oom1Aeg8Lae7guchie2ieba3ahyai
 REACT_APP_VITE_REVERB_HOST=rootdb-ws-api.localhost.com
