--- a/package.json
+++ b/package.json
@@ -3,39 +3,39 @@
     "version": "1.0.4",
     "private": true,
     "dependencies": {
-        "@tanstack/react-table": "^8.16.0",
-        "@testing-library/jest-dom": "^6.4.2",
-        "@testing-library/react": "^15.0.6",
+        "@tanstack/react-table": "^8.17.3",
+        "@testing-library/jest-dom": "^6.4.5",
+        "@testing-library/react": "^15.0.7",
         "@testing-library/user-event": "^14.5.2",
         "@types/dompurify": "^3.0.5",
         "@types/jest": "^29.5.12",
         "@types/lodash.round": "^4.0.9",
-        "@types/node": "^20.12.8",
-        "@types/react": "^18.3.1",
+        "@types/node": "^20.12.13",
+        "@types/react": "^18.3.3",
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-csv": "^1.1.10",
         "@types/react-dom": "^18.3.0",
         "@types/react-grid-layout": "^1.3.5",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-transition-group": "^4.4.10",
-        "@typescript-eslint/eslint-plugin": "^7.8.0",
-        "@typescript-eslint/parser": "^7.8.0",
-        "@typescript-eslint/scope-manager": "^7.8.0",
+        "@typescript-eslint/eslint-plugin": "^7.11.0",
+        "@typescript-eslint/parser": "^7.11.0",
+        "@typescript-eslint/scope-manager": "^7.11.0",
         "ace-builds": "~1.31.2",
-        "axios": "^1.6.8",
+        "axios": "^1.7.2",
         "buffer": "^6.0.3",
-        "chart.js": "^4.4.2",
+        "chart.js": "^4.4.3",
         "classnames": "^2.5.1",
         "crypto-browserify": "^3.12.0",
-        "css-loader": "^7.1.1",
+        "css-loader": "^7.1.2",
         "d3": "^7.9.0",
-        "dompurify": "^3.1.2",
+        "dompurify": "^3.1.4",
         "env-cmd": "^10.1.0",
         "eslint": "^8.57.0",
-        "formik": "^3.0.0-next.8",
+        "formik": "^2.4.6",
         "highlight.js": "^11.9.0",
         "i18next": "^23.11.3",
-        "i18next-browser-languagedetector": "^7.2.1",
+        "i18next-browser-languagedetector": "^8.0.0",
         "js-cookie": "^3.0.5",
         "laravel-echo": "^1.16.1",
         "lodash.difference": "^4.5.0",
@@ -45,10 +45,10 @@
         "pako": "^2.1.0",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
-        "primereact": "10.6.5",
+        "primereact": "10.6.6",
         "prop-types": "^15.8.1",
         "pusher-js": "8.4.0-rc2",
-        "quill": "^2.0.1",
+        "quill": "^2.0.2",
         "react": "^18.3.1",
         "react-ace": "https://github.com/gchallen/react-ace",
         "react-app-rewired": "^2.2.1",
@@ -57,18 +57,18 @@
         "react-dom": "^18.3.1",
         "react-grid-layout": "^1.4.4",
         "react-hanger": "^2.4.5",
-        "react-i18next": "^14.1.1",
-        "react-icons": "^5.2.0",
+        "react-i18next": "^14.1.2",
+        "react-icons": "^5.2.1",
         "react-refresh": "^0.14.2",
         "react-render": "^4.0.0",
         "react-resize-detector": "^10.0.1",
-        "react-router-dom": "^6.23.0",
+        "react-router-dom": "^6.23.1",
         "react-scripts": "^5.0.1",
         "react-toastify": "^10.0.5",
-        "react-tracked": "^1.7.14",
+        "react-tracked": "^2.0.0",
         "react-transition-group": "^4.4.5",
         "react-virtual": "^2.10.4",
-        "sass": "^1.76.0",
+        "sass": "^1.77.3",
         "sass-loader": "^14.2.1",
         "stream-browserify": "^3.0.0",
         "typescript": "^5.4.5",
@@ -107,12 +107,12 @@
         ]
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.24.5",
+        "@babel/eslint-parser": "^7.24.6",
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@babel/preset-react": "^7.24.1",
-        "@babel/preset-typescript": "^7.24.1",
+        "@babel/preset-react": "^7.24.6",
+        "@babel/preset-typescript": "^7.24.6",
         "@types/js-cookie": "^3.0.6",
-        "cypress": "^13.8.1",
+        "cypress": "^13.10.0",
         "eslint-config-react-app": "^7.0.1"
     },
     "packageManager": "yarn@4.1.1"
