--- a/package.json
+++ b/package.json
@@ -3,37 +3,37 @@
     "version": "1.0.4",
     "private": true,
     "dependencies": {
-        "@tanstack/react-table": "^8.17.3",
-        "@testing-library/jest-dom": "^6.4.5",
-        "@testing-library/react": "^15.0.7",
+        "@tanstack/react-table": "^8.19.3",
+        "@testing-library/jest-dom": "^6.4.8",
+        "@testing-library/react": "^16.0.0",
         "@testing-library/user-event": "^14.5.2",
         "@types/dompurify": "^3.0.5",
         "@types/jest": "^29.5.12",
         "@types/lodash.round": "^4.0.9",
-        "@types/node": "^20.12.12",
-        "@types/react": "^18.3.2",
+        "@types/node": "^22.0.2",
+        "@types/react": "^18.3.3",
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-csv": "^1.1.10",
         "@types/react-dom": "^18.3.0",
         "@types/react-grid-layout": "^1.3.5",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-transition-group": "^4.4.10",
-        "@typescript-eslint/eslint-plugin": "^7.9.0",
-        "@typescript-eslint/parser": "^7.9.0",
-        "@typescript-eslint/scope-manager": "^7.9.0",
-        "ace-builds": "~1.31.2",
-        "axios": "^1.6.8",
+        "@typescript-eslint/eslint-plugin": "^8.0.0",
+        "@typescript-eslint/parser": "^8.0.0",
+        "@typescript-eslint/scope-manager": "^8.0.0",
+        "ace-builds": "~1.35.4",
+        "axios": "^1.7.2",
         "buffer": "^6.0.3",
-        "chart.js": "^4.4.2",
+        "chart.js": "^4.4.3",
         "classnames": "^2.5.1",
         "crypto-browserify": "^3.12.0",
-        "css-loader": "^7.1.1",
+        "css-loader": "^7.1.2",
         "d3": "^7.9.0",
-        "dompurify": "^3.1.3",
+        "dompurify": "^3.1.6",
         "env-cmd": "^10.1.0",
         "formik": "^2.4.6",
-        "highlight.js": "^11.9.0",
-        "i18next": "^23.11.4",
+        "highlight.js": "^11.10.0",
+        "i18next": "^23.12.2",
         "i18next-browser-languagedetector": "^8.0.0",
         "js-cookie": "^3.0.5",
         "laravel-echo": "^1.16.1",
@@ -44,9 +44,9 @@
         "pako": "^2.1.0",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
-        "primereact": "10.6.5",
+        "primereact": "^10.8.0",
         "prop-types": "^15.8.1",
-        "pusher-js": "8.4.0-rc2",
+        "pusher-js": "^8.4.0-rc2",
         "quill": "^2.0.2",
         "react": "^18.3.1",
         "react-ace": "https://github.com/gchallen/react-ace",
@@ -56,19 +56,19 @@
         "react-dom": "^18.3.1",
         "react-grid-layout": "^1.4.4",
         "react-hanger": "^2.4.5",
-        "react-i18next": "^14.1.1",
+        "react-i18next": "^15.0.0",
         "react-icons": "^5.2.1",
         "react-refresh": "^0.14.2",
         "react-render": "^4.0.0",
-        "react-resize-detector": "^10.0.1",
-        "react-router-dom": "^6.23.1",
+        "react-resize-detector": "^11.0.1",
+        "react-router-dom": "^6.25.1",
         "react-scripts": "^5.0.1",
         "react-toastify": "^10.0.5",
         "react-tracked": "^2.0.0",
         "react-transition-group": "^4.4.5",
         "react-virtual": "^2.10.4",
-        "sass": "^1.76.0",
-        "sass-loader": "^14.2.1",
+        "sass": "^1.77.8",
+        "sass-loader": "^16.0.0",
         "stream-browserify": "^3.0.0",
         "use-reducer-async": "^2.1.1",
         "yup": "^1.4.0"
@@ -105,18 +105,18 @@
         ]
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.24.5",
+        "@babel/eslint-parser": "^8.0.0-alpha.12",
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@babel/preset-react": "^7.24.1",
-        "@babel/preset-typescript": "^7.24.1",
-        "@eslint/eslintrc": "^3.0.2",
-        "@eslint/js": "^9.2.0",
+        "@babel/preset-react": "^7.24.7",
+        "@babel/preset-typescript": "^7.24.7",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^10.0.0",
         "@types/js-cookie": "^3.0.6",
-        "cypress": "^13.8.1",
+        "cypress": "^13.13.2",
         "eslint": "^8.57.0",
         "eslint-config-react-app": "^7.0.1",
-        "typescript": "^5.4.5",
-        "typescript-eslint": "^7.9.0"
+        "typescript": "^5.5.4",
+        "typescript-eslint": "^8.0.0"
     },
-    "packageManager": "yarn@4.1.1"
+    "packageManager": "yarn@4.3.1"
 }
