--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto-browserify": "^3.12.0",
     "css-loader": "^7.1.2",
     "d3": "^7.9.0",
+    "d3-color": "^3.1.0",
     "dompurify": "^3.1.6",
     "echarts": "^5.5.1",
     "env-cmd": "^10.1.0",
