--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.4",
   "private": true,
   "dependencies": {
+    "@atlaskit/codemod-utils": "^4.2.4",
+    "@atlaskit/pragmatic-drag-and-drop-react-beautiful-dnd-migration": "^1.3.1",
     "@tanstack/react-table": "^8.19.3",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
@@ -53,7 +55,6 @@
     "react": "^18.3.1",
     "react-ace": "https://github.com/gchallen/react-ace",
     "react-app-rewired": "^2.2.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
