RootDBApp/frontend#18 - dependencies upgrade.

--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "dependencies": {
     "@atlaskit/codemod-utils": "^4.2.4",
     "@atlaskit/pragmatic-drag-and-drop-react-beautiful-dnd-migration": "^1.3.1",
-    "@tanstack/react-table": "^8.19.3",
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/dompurify": "^3.0.5",
-    "@types/jest": "^29.5.12",
+    "@tanstack/react-table": "^8.20.6",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/dompurify": "^3.2.0",
+    "@types/jest": "^29.5.14",
     "@types/lodash.round": "^4.0.9",
-    "@types/node": "^22.0.2",
+    "@types/node": "^22.10.9",
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-csv": "^1.1.10",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "^18.3.5",
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.10",
+    "@types/react-transition-group": "^4.4.12",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@typescript-eslint/scope-manager": "^8.0.0",
@@ -32,15 +32,15 @@
     "css-loader": "^7.1.2",
     "d3": "^7.9.0",
     "d3-color": "^3.1.0",
-    "dompurify": "^3.1.6",
-    "echarts": "^5.5.1",
+    "dompurify": "^3.2.3",
+    "echarts": "^5.6.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.6",
-    "highlight.js": "^11.10.0",
-    "i18next": "^23.12.2",
-    "i18next-browser-languagedetector": "^8.0.0",
+    "highlight.js": "^11.11.1",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
     "js-cookie": "^3.0.5",
-    "laravel-echo": "^1.16.1",
+    "laravel-echo": "^1.19.0",
     "lodash.difference": "^4.5.0",
     "lodash.pull": "^4.1.0",
     "lodash.round": "^4.0.4",
@@ -48,33 +48,33 @@
     "pako": "^2.1.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primereact": "^10.9.1",
+    "primereact": "10.8.5",
     "prop-types": "^15.8.1",
     "pusher-js": "^8.4.0-rc2",
-    "quill": "^2.0.2",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
-    "react-ace": "https://github.com/gchallen/react-ace",
+    "react-ace": "^13.0.0",
     "react-app-rewired": "^2.2.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
-    "react-grid-layout": "^1.4.4",
+    "react-grid-layout": "^1.5.0",
     "react-hanger": "^2.4.5",
-    "react-i18next": "^15.0.0",
-    "react-icons": "^5.2.1",
-    "react-refresh": "^0.14.2",
+    "react-i18next": "^15.4.0",
+    "react-icons": "^5.4.0",
+    "react-refresh": "^0.16.0",
     "react-render": "^4.0.0",
-    "react-resize-detector": "^11.0.1",
+    "react-resize-detector": "^12.0.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^10.0.5",
-    "react-tracked": "^2.0.0",
+    "react-toastify": "^11.0.3",
+    "react-tracked": "^2.0.1",
     "react-transition-group": "^4.4.5",
     "react-virtual": "^2.10.4",
     "sass": "^1.77.8",
-    "sass-loader": "^16.0.0",
+    "sass-loader": "^16.0.4",
     "stream-browserify": "^3.0.0",
     "use-reducer-async": "^2.1.1",
-    "yup": "^1.4.0"
+    "yup": "^1.6.1"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -110,15 +110,15 @@
   "devDependencies": {
     "@babel/eslint-parser": "^8.0.0-alpha.12",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@eslint/eslintrc": "^3.1.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^10.0.0",
     "@types/js-cookie": "^3.0.6",
-    "cypress": "^13.13.2",
+    "cypress": "^14.0.0",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
-    "typescript": "^5.5.4",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.0.0"
   },
   "packageManager": "yarn@4.5.0"
