--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@typescript-eslint/scope-manager": "^8.0.0",
-    "ace-builds": "~1.35.4",
+    "ace-builds": "^1.37.5",
     "axios": "^1.7.4",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.3",
