RootDBApp/frontend#18 - eslint v9 upgrade.

--- a/.env.dev
+++ b/.env.dev
@@ -7,3 +7,4 @@ REACT_APP_VITE_REVERB_APP_KEY=jetuePoh5uyeeth8oom1Aeg8Lae7guchie2ieba3ahyai
 REACT_APP_VITE_REVERB_HOST=dev-rootdb-ws-api.localhost.com
 REACT_APP_VITE_REVERB_PORT=80
 REACT_APP_VITE_REVERB_SCHEME=http
+DISABLE_ESLINT_PLUGIN=true
