--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.12",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "@typescript-eslint/scope-manager": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "@typescript-eslint/scope-manager": "^8.21.0",
     "ace-builds": "^1.37.5",
     "axios": "^1.7.4",
     "buffer": "^6.0.3",
@@ -108,18 +108,18 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^8.0.0-alpha.12",
+    "@babel/eslint-parser": "^8.0.0-alpha.15",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-react": "^8.0.0-alpha.15",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^10.0.0",
+    "@eslint/js": "^9.18.0",
     "@types/js-cookie": "^3.0.6",
     "cypress": "^14.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.18.0",
     "eslint-config-react-app": "^7.0.1",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.21.0"
   },
   "packageManager": "yarn@4.5.0"
 }
